--- a/css/styles.css
+++ b/css/styles.css
@@ -250,7 +250,7 @@ color: var(--background-color);
     
     
     width: 100%;
-    height: 1024px;
+    height: 100%;
     background-color: rgba(0, 0, 0, 0.6);
     opacity: 1;
     transition: opacity 250ms linear;
