--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ span {
 body{
     margin: 0 auto;
     font-family: 'Roboto', sans-serif;;
-    
+    padding-top: 80px;
     background: var(--background-color);
   
 }
@@ -62,10 +62,14 @@ header{
     box-sizing: border-box;
     padding: 24px 0 25px 0;
     border-bottom: 1px solid #EEEEEE;
-    
+    position: fixed;
+    width: 100%;
+    background: var(--background-color);
+    top: 0;
+    z-index: 100;
 }
 header a,header ul,header nav, header div{
-    background: var(--background-color);
+    
     display: flex;
     flex-direction: row;
     justify-content: baseline;
