--- a/css/styles.css
+++ b/css/styles.css
@@ -809,6 +809,7 @@ padding: 6px 22px;
     padding: 0;
     list-style: none;
 }
+
 .product{
     
     display: inline-block;
@@ -841,6 +842,10 @@ padding: 6px 22px;
     opacity: 1;
     transform: translateY(-100%);
 }
+.net a:focus  .product-overlay {
+    opacity: 1;
+    transform: translateY(-100%);
+}
 
 /* .product-thumb::before{
     content: '';
@@ -863,7 +868,7 @@ transform: translateY(0);
         0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.product:focus {
+.net a:focus {
 
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
         0px 1px 2px rgba(0, 0, 0, 0.08),
@@ -889,10 +894,12 @@ transform: translateY(0);
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
-.product:hover .product-actions {
+.net a:hover .product-actions {
     opacity: 1;
 }
-
+.net a:focus  .product-actions {
+    opacity: 1;
+}
     
 .action-name1{
     padding: 20px 24px;
@@ -926,6 +933,8 @@ transform: translateY(0);
     letter-spacing: 0.03em;
     color: var(--second-text);
 }
+
+/* footer */
 footer{
     height: 252px;
     background-color: var(--brand-color);
