--- a/css/styles.css
+++ b/css/styles.css
@@ -868,7 +868,7 @@ transform: translateY(0);
         0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.net a:focus {
+.product:focus {
 
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
         0px 1px 2px rgba(0, 0, 0, 0.08),
